<resources>
    <string name="app_name">BinarBattle</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="picture">Picture</string>
    <string name="gallery_chooser_title">Select Picture</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="image_from_update">Image from update</string>
</resources>